# Autonomous-Intercept-Drone

./: README.md  run_swarm.sh
.claude/: settings.local.json
assets/: plot_result.py  plot_result_demo.py  vpng_intercept_stats.csv  vpng_intercept_stats_circle.csv  vpng_intercept_stats_random_walk.csv  vpng_intercept_stats_sinusoidal.csv  vpng_plot.m  vpng_plot.py
assets/gazebo_world/: grass_world.sdf
ros2_helloworld/: CMakeLists.txt  package.xml
ros2_helloworld/include/ros2_helloworld/: helloworld.h
ros2_helloworld/src/: main.cpp
uav_bc_recorder/: launch_bc_collection.sh  package.xml  setup.cfg  setup.py
uav_bc_recorder/uav_bc_recorder/: recorder_node.py
uav_common_msg/: CMakeLists.txt  package.xml
uav_common_msg/msg/: Data.msg  RectMsg.msg
uav_ibvs_control/: CMakeLists.txt  package.xml  readme.md
uav_ibvs_control/include/: los_control.hpp
uav_ibvs_control/src/: kalman.cpp  los_control.cpp  los_control_backup.cpp  params.yaml
uav_keyboard_control/: CMakeLists.txt  package.xml
uav_keyboard_control/include/uav_keyboard_control/: DroneKeyboardControl.h
uav_keyboard_control/src/: main.cpp
uav_png_intercept/: CMakeLists.txt  data.txt  intercept_data.csv  package.xml
uav_png_intercept/include/uav_png_intercept/: png_control.hpp
uav_png_intercept/src/: back.cpp  png_control.cpp
uav_rl_guidance/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
uav_rl_guidance/config/: params.yaml
uav_rl_guidance/include/uav_rl_guidance/: rl_guidance_node.hpp
uav_rl_guidance/launch/: rl_guidance.launch.py
uav_rl_guidance/models/: README.md  policy.onnx  policy.pt  policy_meta.json
uav_rl_guidance/src/: export_onnx.py  rl_guidance_node.cpp
uav_rl_guidance/uav_rl_guidance/: policy_runtime.py  rl_guidance_node.py
uav_target_sim/: CMakeLists.txt  package.xml  xyz_log.txt
uav_target_sim/include/uav_target_sim/: uav_target_sim.hpp
uav_target_sim/launch/: target_sim.launch.py
uav_target_sim/src/: main.cpp  uav_target_sim.cpp
uav_vehicle_controller/: CMakeLists.txt  package.xml
uav_vehicle_controller/include/uav_vehicle_controller/: uav_vehicle_controller.cpp  uav_vehicle_controller.hpp
uav_vehicle_controller/src/: main.cpp
uav_vision_dectect/: CMakeLists.txt  package.xml
uav_vision_dectect/include/light_track/: LightTrack.h
uav_vision_dectect/include/uav_vision_dectect/: uav_control.hpp  uav_topic_subscrib.hpp  yolo_detector.hpp
uav_vision_dectect/src/: LightTrack.cpp  main.cpp  uav_control.cpp  uav_topic_subscrib.cpp  yolo_detector.cpp
uav_vision_png/: CMakeLists.txt  package.xml
uav_vision_png/config/: params.yaml
uav_vision_png/include/uav_vision_png/: vision_png_control.hpp
uav_vision_png/launch/: vision_png.launch.py
uav_vision_png/src/: vision_png_control.cpp
