<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_bc_recorder</name>
  <version>0.1.0</version>
  <description>Record Gazebo camera images + detection/trajectory data for BC training</description>
  <maintainer email="verser@example.com">verser</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>uav_common_msg</depend>
  <depend>cv_bridge</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>